Finish log in/log out

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,1 +1,9 @@
-# empty file
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
+  
+joaonunosantoscosta:
+  name: Joao Costa
+  email: joaonunosantoscosta@gmail.com
+  password_digest: <%= User.digest('password') %>
